@@ -37,3 +37,10 @@ eclipse {
 		}
 	}
 }
+
+tasks.named("compileJava") {
+	options.compilerArgs += ['--add-reads', "kieker.analysis=ALL-UNNAMED",
+							 '--add-reads', "kieker.tools=ALL-UNNAMED",
+							 '--add-reads', "kieker.tools.resource.monitor=ALL-UNNAMED",
+	]
+}
